# fastapi_zero

./: .gitignore  pyproject.toml
fastapi_zero/: app.py  schemas.py
tests/: conftest.py  test_app.py  test_db.py
